Change "gridContainer" to "container"

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
      <h1>Etch-a-Sketch</h1>
      <h3>Ready, Set, DRAW!</h3>
-     <div id="gridContainer"> </div>
+     <div id="container"></div>
 </body>
 </html>
