--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-Sketch</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="js.js"></script>
+    <script defer src="js.js"></script>
 </head>
 <body>
      <h1>Etch-a-Sketch</h1>
