--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
      <h1>Etch-a-Sketch</h1>
      <h3>Ready, Set, DRAW!</h3>
+     <button>Select your grid size</button>
      <div id="container"></div>
 </body>
 </html>
