--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <script defer src="js.js"></script>
 </head>
 <body>
-     <h1>Etch-a-Sketch</h1>
-     <h3>Ready, Set, DRAW!</h3>
-     <button>Select your grid size</button>
-     <div id="container"></div>
+     <div id="header">
+        <h1>Etch-a-Sketch</h1>
+        <h3>Ready, Set, DRAW!</h3>
+     </div>
+     <div class = "content">
+        <button>Select your grid size</button>
+        <div id="container"></div>
+    </div>
 </body>
 </html>
