--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h3>Ready, Set, DRAW!</h3>
      </div>
      <div class = "content">
-        <button>Select your grid size</button>
+        <button>Click here to select your grid size</button>
         <div id="container"></div>
     </div>
 </body>
