Add reset button and make grid size button changes
Edited text content for both buttons, put them under a "buttons" class, but still assigned individual IDs for JS purposes.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         <h3>Ready, Set, DRAW!</h3>
      </div>
      <div class = "content">
-        <button>Click here to select your grid size</button>
+        <div class="buttons">
+            <button id="gridSelect">Select Grid Size</button>
+            <button id="resetButton">Grid Reset</button>
+        </div>
         <div id="container"></div>
     </div>
 </body>
