Add "currently disabled" note to grid reset button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <div class = "content">
         <div class="buttons">
             <button id="gridSelect">Select Grid Size</button>
-            <!-- <button id="resetButton">Grid Reset</button> -->
+            <button id="resetButton">Grid Reset (currently  disabled)</button>
         </div>
         <div id="container"></div>
     </div>
