--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <div class = "content">
         <div class="buttons">
             <button id="gridSelect">Select Grid Size</button>
-            <button id="resetButton">Grid Reset (16x16)</button>
+            <button id="resetButton">Grid Reset</button>
         </div>
         <div id="container"></div>
     </div>
